# nngs

./: .gitignore  AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  acconfig.h  confdefs.h  config.h.in  configure  configure.in  missing.h  mkinstalldirs  wscript
CVS/: Entries  Repository
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
autom4te.cache/CVS/: Repository
data/: Makefile.am  Makefile.in  emotestr
data/CVS/: Entries  Repository
data/ahelp/: Makefile.am  Makefile.in
data/ahelp/CVS/: Entries  Repository
data/ahelp/ch/: adhelp  lists
data/ahelp/ch/CVS/: Entries  Repository
data/ahelp/de/: scheisse
data/ahelp/de/CVS/: Entries  Repository
data/ahelp/en/: aban  actitle  addlist  adhelp  admin_commands  admotd  adrop  announce  arank  asetadmin  asetemail  asetpasswd  asetrealname  asetsilent  asetwater  ashout  ausers  bmuzzle  chkip  chkpl  chksc  debug  forcerecalc  gmuzzle  hide  lashout  lists  muzzle  noshout  nuke  pose  reload_ladders  remplayer  showlist  shutdown  sublist  unhide
data/ahelp/en/CVS/: Entries  Repository
data/ahelp/fr/CVS/: Repository
data/ahelp/pl/CVS/: Repository
data/help/: Makefile.am  Makefile.in
data/help/CVS/: Entries  Repository
data/help/ch/: 100daysrank  2ndlgt  accept  addtime  adjourn  admins  alias  all  awho  best  busy  cao  censor  channel  cho  chou  chuang  clients  commands  credits  ctitle  dana  danascore  danb  danbscore  date  decline  drop  ematch  erase  extra  final  find  free  game  games  geek  ginfo  gobot  gse  (+107 more)
data/help/ch/CVS/: Entries  Repository
data/help/de/CVS/: Entries  Repository
data/help/en/: accept  address  addtime  adjourn  admins  aga  alias  all  arden  automail  awho  ayt  beep  bell  best  busy  censor  cgoban  changes  channel  choice  client  clients  clntvrfy  commands  compuserve  credits  ctitle  date  decline  dnd  done  drop  emote  erase  etiquette  event  expire  extra  find  (+120 more)
data/help/en/CVS/: Entries  Repository
data/help/fr/: accept  addtime  adjourn  admins  alias  all  automail  awho  busy  channel  commands  credits  ctitle  date  decline  dnd  done  email  erase  find  free  fteach  games  ginfo  git  gshout  handicap  handles  help  inchannel  info  invite  it  kibitz  komi  last  load  lock  logons  look  (+51 more)
data/help/fr/CVS/: Entries  Repository
data/help/pl/: accept  addtime  adjourn  admins  alias  all  automail  busy  censor  channel  commands  credits  ctitle  date  decline  dnd  done  email  erase  find  free  games  handicap  handles  inchannel  info  invite  it  kibitz  komi  last  load  lock  logons  look  match  messages  mhelp  mmess  newbie  (+44 more)
data/help/pl/CVS/: Entries  Repository
data/info/: admins  etiquette  motd  register  sourcecode
data/info/CVS/: Entries  Repository  Root
data/ladder/: ladder19.example  ladder9.example
data/ladder/CVS/: Entries  Repository
data/lists/: HelpToIndex  badname.default  ban.default  index.default
data/lists/CVS/: Entries  Repository
data/messages/: admotd.default  login.default  logout.default  motd.christmas  motd.default  unregistered.default  welcome.default
data/messages/CVS/: Entries  Repository
data/news/: adminnews.1  adminnews.index  news.1  news.index
data/news/CVS/: Entries  Repository
data/spool/CVS/: Repository
docs/: admin.howto  autotool.howto  gmp-protocol-1.0.txt  portforwarding.howto  server-protocol.txt
docs/CVS/: Entries  Repository
memory/: Makefile.am  Makefile.in  README.memory  malloc.c  malloc.h  salloc.c  salloc.h
memory/CVS/: Entries  Repository
mlrate/src/: CHANGES  FILES  Makefile  README  anchor.c  circular.c  circular.h  cmd.c  cmd.h  error.c  error.h  game.c  game.h  hdbm.c  hdbm.h  ilog2.c  ilog2.h  itime.c  list.c  list.h  list_types.h  mkpackage.sh  mkrundir.sh  mlr.c  mlr.h  mlrate.c  old2newres.c  oldresult.c  oldresult.h  pg.h  player.c  player.h  rank.c  rank.h  rdbm.c  rdbm.h  rdbmtool.c  result.c  result.h  rhistory.c  (+11 more)
src/: Makefile.am  Makefile.in  adminproc.c  adminproc.h  alias.c  alias.h  bm.c  bm.h  censor.c  censor.h  channel.c  channel.h  chkaddr.c  chkaddr.h  command.c  command.h  command_list.h  common.h  comproc.c  comproc.h  conffile.c  conffile.h  emote.cc  emote.h  emote2.c  emote2.h  files.h  formats.h  gamedb.c  gamedb.h  gameproc.c  gameproc.h  ip_ban.c  ip_ban.h  ladder.c  ladder.h  language.c  language.h  legal.c  legal.h  (+24 more)
src/CVS/: Entries  Repository
